test/corpus/conditionals.txt
===============================================================================
Conditionals (%ifarch)
===============================================================================

%ifarch s390x
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (ifarch_statement
    (arch
      (identifier))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%ifos)
===============================================================================

%ifos linux
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (ifos_statement
    (os
      (identifier))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%ifnarch)
===============================================================================

%ifnarch x86_64
BuildRequires:  magic
%endif

-------------------------------------------------------------------------------

(spec
  (ifarch_statement
    (arch
      (identifier))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%if with simple macros)
===============================================================================

%if %{defined with_foo}
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (defined_operator
      (identifier))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%if with complex macros)
===============================================================================

%if %{defined with_foo} && %{undefined with_bar}
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (boolean_operator
      (defined_operator
        (identifier))
      (defined_operator
        (identifier)))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%if with string comparison)
===============================================================================

%if "%{optimize_flags}" != "none"
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (comparison_operator
      (quoted_string
        (macro_expansion
          (identifier)))
      (quoted_string
        (quoted_string_content)))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%if with mathematical comparison)
===============================================================================

%if 0%{?fedora} > 10 || 0%{?rhel} > 7
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (boolean_operator
      (comparison_operator
        (integer_expansion
          (integer)
          (macro_expansion
            (macro_ternary
              (identifier))))
        (integer))
      (comparison_operator
        (integer_expansion
          (integer)
          (macro_expansion
            (macro_ternary
              (identifier))))
        (integer)))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%if with expansion)
===============================================================================

%if 0%{?fedora}
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (integer_expansion
      (integer)
      (macro_expansion
         (macro_ternary
           (identifier))))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%if with paranthesis)
===============================================================================

%if (0%{?fedora} || 0%{?rhel} > 7)
BuildRequires:  foo
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (parenthesized_expression
      (boolean_operator
        (integer_expansion
          (integer)
          (macro_expansion
            (macro_ternary
              (identifier))))
        (comparison_operator
          (integer_expansion
            (integer)
            (macro_expansion
              (macro_ternary
                (identifier))))
          (integer))))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))))

===============================================================================
Conditionals (%if with %else)
===============================================================================

%if 0%{?fedora}
BuildRequires:  foo
%else
BuildRequires:  bar
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (integer_expansion
      (integer)
      (macro_expansion
        (macro_ternary
          (identifier))))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))
    (else_clause
      (preamble
        (tags
          (dependency_tag)
          (string
            (string_content)))))))

===============================================================================
Conditionals (%if with %elif)
===============================================================================

%if 0%{?fedora}
BuildRequires:  foo
%elif 0%{?rhel}
BuildRequires:  bar
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (integer_expansion
      (integer)
      (macro_expansion
        (macro_ternary
          (identifier))))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))
    (elif_clause
      (integer_expansion
        (integer)
        (macro_expansion
          (macro_ternary
            (identifier))))
      (preamble
        (tags
          (dependency_tag)
          (string
            (string_content)))))))

===============================================================================
Conditionals (%if with %elif and %else)
===============================================================================

%if 0%{?fedora}
BuildRequires:  foo
%elif 0%{?rhel}
BuildRequires:  bar
%else
BuildRequires:  wurst
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (integer_expansion
      (integer)
      (macro_expansion
        (macro_ternary
          (identifier))))
    (preamble
      (tags
        (dependency_tag)
        (string
          (string_content))))
    (elif_clause
      (integer_expansion
        (integer)
        (macro_expansion
          (macro_ternary
            (identifier))))
      (preamble
        (tags
          (dependency_tag)
          (string
            (string_content)))))
    (else_clause
      (preamble
        (tags
          (dependency_tag)
          (string
            (string_content)))))))

===============================================================================
Conditionals (Nested %if with %elif and %else)
===============================================================================

%if 0%{?rhel}

%ifarch x86_64
%bcond_without ceph
%bcond_without winexe
%else
%bcond_with ceph
%bcond_with winexe
#endifarch
%endif

%else
%bcond_without ceph
%bcond_without winexe
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (integer_expansion
      (integer)
      (macro_expansion
        (macro_ternary
          (identifier))))
    (ifarch_statement
      (arch
        (identifier))
      (macro_invocation
        (macro_expansion
          (identifier))
        (string
          (string_content)))
      (macro_invocation
        (macro_expansion
          (identifier))
        (string
          (string_content)))
      (else_clause
        (macro_invocation
          (macro_expansion
            (identifier))
          (string
            (string_content)))
        (macro_invocation
          (macro_expansion
            (identifier))
          (string
            (string_content))))
      (comment))
    (else_clause
      (macro_invocation
        (macro_expansion
          (identifier))
        (string
          (string_content)))
      (macro_invocation
        (macro_expansion
          (identifier))
        (string
          (string_content))))))

===============================================================================
Conditionals (%if %{with ..})
===============================================================================

%if %{with libwbclient}
Requires(post): libwbclient = %{samba_depver}
%endif

-------------------------------------------------------------------------------

(spec
  (if_statement
    (with_operator
      (identifier))
    (preamble
      (tags
        (dependency_tag
          (qualifier))
        (string
          (string_content)
          (macro_expansion
            (identifier)))))))
