test/corpus/macro_builtins.txt
# Builtin macro tests for parametric and functional syntax
#
# This test file covers both the colon syntax (%{builtin:argument}) and the
# parametric syntax (%builtin [options] [arguments]) for builtin macros.
# The parametric syntax supports options and arguments parsed up to string end
# or next newline, as specified in the RPM macro documentation.
#
# See: https://rpm-software-management.github.io/rpm/man/rpm-macros.7
# Examples include:
# - %{basename:/some/dir/file.suf}  # Colon syntax
# - %basename /some/dir/file.suf    # Parametric syntax
# - %dirname -x /path/to/file       # Parametric with options

===============================================================================
Macro Builtin (basename simple)
===============================================================================

%{basename}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)))

===============================================================================
Macro Builtin (dirname with path)
===============================================================================

%{dirname:/some/dir/file.suf}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Macro Builtin (lower case conversion)
===============================================================================

%{lower:CamelCase}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Macro Builtin (upper case conversion)
===============================================================================

%{upper:CamelCase}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Macro Builtin (getenv environment variable)
===============================================================================

%{getenv:HOME}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Macro Builtin (exists file check)
===============================================================================

%{exists:%{builddir}/myflag.txt}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (concatenation
      (macro_expansion
        (identifier))
      (word))))

===============================================================================
Macro Builtin (suffix extraction)
===============================================================================

%{suffix:myfile.zip}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Macro Builtin (uncompress command)
===============================================================================

%{uncompress:/my/source.tar.gz}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Macro Builtin (quote string with spaces)
===============================================================================

%{quote:empty spaces.zip}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (shrink whitespace)
===============================================================================

%{shrink:aa  bb   ccc   }

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (len string length)
===============================================================================

%{len:hello world}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (reverse string)
===============================================================================

%{reverse:hello}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Macro Builtin (rep string repetition)
===============================================================================

%{rep:hello 3}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (integer)))

===============================================================================
Macro Builtin (sub string substitution)
===============================================================================

%{sub:old:new:old text old}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (gsub global substitution)
===============================================================================

%{gsub:old:new:old text old}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (getncpus system info)
===============================================================================

%{getncpus}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)))

===============================================================================
Macro Builtin (expand macro expansion)
===============================================================================

%{expand:%{version}-%{release}}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (concatenation
      (macro_expansion
        (identifier))
      (word)
      (macro_expansion
        (identifier)))))

===============================================================================
Macro Builtin (echo output)
===============================================================================

%{echo:Building package}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (warn warning message)
===============================================================================

%{warn:This is deprecated}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (error fatal error)
===============================================================================

%{error:Build failed}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)
    argument: (word)))

===============================================================================
Macro Builtin (trace debugging)
===============================================================================

%{trace:0}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Parametric Macro (basename with argument)
===============================================================================

%basename /some/dir/file.suf

-------------------------------------------------------------------------------

(spec
  (macro_expansion_call
    (builtin)
    argument: (word)))

===============================================================================
Parametric Macro (dirname with multiple arguments)
===============================================================================

%dirname /path/to/file.txt /another/path

-------------------------------------------------------------------------------

(spec
  (macro_expansion_call
    (builtin)
    argument: (word)
    argument: (word)))

===============================================================================
Parametric Macro (builtin with short option)
===============================================================================

%getenv -x HOME

-------------------------------------------------------------------------------

(spec
  (macro_expansion_call
    (builtin)
    option: (macro_option)
    argument: (word)))

===============================================================================
Parametric Macro (builtin with option and value)
===============================================================================

%gsub -p old new text

-------------------------------------------------------------------------------

(spec
  (macro_expansion_call
    (builtin)
    option: (macro_option)
    argument: (word)
    argument: (word)
    argument: (word)))

===============================================================================
Parametric Macro (within braces with arguments)
===============================================================================

%{basename /some/dir/file.suf}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    argument: (word)))

===============================================================================
Parametric Macro (within braces with options)
===============================================================================

%{dirname -x /path/to/file}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (builtin)
    option: (macro_option)
    argument: (word)))

===============================================================================
Parametric Macro (with macro expansion as argument)
===============================================================================

%basename %{builddir}/file.txt

-------------------------------------------------------------------------------

(spec
  (macro_expansion_call
    (builtin)
    argument: (macro_expansion
      (identifier))
    argument: (word)))

===============================================================================
TODO Parametric Macro (complex with separator)
:skip
===============================================================================

%sub -- old new %{version}-%{release}

-------------------------------------------------------------------------------
